--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>GENISIS-SYSTEM</title>
+  <script title="OnlineWebFonts" src="https://db.onlinewebfonts.com/animations/icons/520251.js" type="text/javascript"></script>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="logo.svg">
